i think i fixed the issue with themeasurements not showing or saving

--- a/frontend/src/pages/dashboard/components/log-workout/LogWorkout.css
+++ b/frontend/src/pages/dashboard/components/log-workout/LogWorkout.css
@@ -569,12 +569,12 @@
   
   .LogWorkout-days {
     grid-template-columns: 1fr;
-    gap: 1em;
+    gap: 0.Day-cardem;
   }
   
   .Day-card {
     padding: 1em;
-    margin-bottom: 1em;
+    margin-bottom: 0em !important;
     margin: 0em;
   }
   
